<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bc_login"
        tools:context=".screens.login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"
                android:layout_marginBottom="50dp"
                app:srcCompat="@drawable/ic_naseem"
                android:contentDescription="@string/todo" />

            <!--<ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_logo" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/naseem_executive_nhope_you_will_enjoy_the_nstay_here"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/colorWhite"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/email_et"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:hint="@string/username"
                    android:text="@={viewModel.email}"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_lock"
                    app:tint="@color/colorWhite"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/password_et"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword"/>

            </LinearLayout>


            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/btn_shape"
                android:text="@string/sign_in"
                android:onClick="@{() -> viewModel.onSigInUserClick()}"
                android:visibility="@{viewModel.mLoading? View.GONE : View.VISIBLE}"

                android:textColor="@color/colorWhite" />

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:indeterminateTint="@color/colorWhite"
                android:visibility="@{viewModel.mLoading? View.VISIBLE : View.GONE}" />
        </LinearLayout>

    </FrameLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.infini8ai.naseemexecutive.screens.login.LoginViewModel" />

    </data>
</layout>
